[package]
name = "lametric-endpoint"
version = "0.2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tissue-rs = { git = "https://github.com/kb10uy/tissue-rs" }
async-std = { version = "1.9.0", features = ["attributes"] }
tide = "0.16.0"
surf = { version = "2.2.0", default-features = false, features = ["h1-client", "middleware-logger"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
anyhow = "1.0.42"
regex = "1.5.4"
once_cell = "1.8.0"
chrono = "0.4.19"
async-trait = "0.1.51"
